# ifc-lite

./: Cargo.toml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.changeset/: vast-trams-play.md  window-reveal-cuts.md
.github/workflows/: desktop-compat.yml
apps/desktop/: package.json
apps/server/src/services/: streaming.rs
apps/server/src/types/: response.rs
apps/viewer/: CHANGELOG.md  package.json
apps/viewer/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/viewer/src/components/viewer/: CesiumOverlay.tsx  ChatPanel.tsx  CommandPalette.tsx  MainToolbar.tsx  SettingsPage.tsx  UpgradePage.tsx  ViewportContainer.tsx
apps/viewer/src/components/viewer/chat/: ModelSelector.tsx
apps/viewer/src/components/viewer/properties/: GeoreferencingPanel.tsx
apps/viewer/src/hooks/: useIfcFederation.ts  useIfcLoader.ts
apps/viewer/src/hooks/ingest/: viewerModelIngest.ts
apps/viewer/src/lib/: desktop-entitlement.ts  desktop-product.ts
apps/viewer/src/lib/desktop/: ClerkDesktopEntitlementSync.tsx
apps/viewer/src/lib/geo/: effective-georef.test.ts  effective-georef.ts
apps/viewer/src/lib/llm/: byok-guard.test.ts  byok-guard.ts  free-models.test.ts  models.ts  stream-client.ts  stream-direct.test.ts  stream-direct.ts  types.ts
apps/viewer/src/services/: api-keys.ts
apps/viewer/src/store/: index.ts  types.ts
apps/viewer/src/store/slices/: chatSlice.test.ts  chatSlice.ts
rust/geometry/src/processors/: brep.rs
rust/geometry/src/router/: mod.rs  processing.rs  tests.rs  transforms.rs  voids.rs  voids_2d.rs
rust/processing/src/: lib.rs  processor.rs
rust/processing/src/types/: response.rs
scripts/: check-desktop-contract.mjs
server/chat/: chat-handler.ts  sql-chat-usage-store.ts
tests/api/: chat.test.ts
