[workspace]
members = ["rust/core", "rust/engine", "rust/geometry", "rust/processing", "rust/wasm-bindings", "apps/server", "apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "2.1.9"
edition = "2021"
authors = ["IFC-Lite Contributors"]
license = "MPL-2.0"
repository = "https://github.com/louistrue/ifc-lite"

[workspace.dependencies]
ifc-lite-core = { version = "2.1.9", path = "rust/core" }
ifc-lite-engine = { version = "2.1.7", path = "rust/engine" }
ifc-lite-geometry = { version = "2.1.9", path = "rust/geometry" }
ifc-lite-processing = { version = "2.1.7", path = "rust/processing" }
ifc-lite-wasm = { version = "2.1.9", path = "rust/wasm-bindings" }

[profile.release]
opt-level = 3           # Optimize for speed
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization (slower compile)
strip = true            # Strip symbols
panic = 'abort'         # Smaller panic handler
overflow-checks = false # Remove overflow checks in release

[profile.release.package."*"]
opt-level = 3
strip = true

# The upstream `core2` crate has been fully yanked from crates.io (every
# version), which breaks fresh dependency resolution for anything that
# transitively depends on it. In this workspace the only user is
# `csgrs 0.20`, which lists `core2` as a non-optional dependency even
# though its actual usage sits inside the feature-gated `stl-io`/`dxf-io`
# modules we don't enable. Redirect the reference to a local empty stub
# so the workspace can resolve and build. See `rust/vendor/core2/src/lib.rs`
# for the full write-up and removal criteria.
[patch.crates-io]
core2 = { path = "rust/vendor/core2" }
